deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8l-backend
  namespace: k8l
  labels:
    app: k8l-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8l-backend
  template:
    metadata:
      labels:
        app: k8l-backend
    spec:
      serviceAccountName: approle-sa
      containers:
      - name: backend
        image: 301811561350.dkr.ecr.us-east-1.amazonaws.com/eks-testing:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: http
        resources:
          requests:
            cpu: 10m
            memory: 220Mi
          limits:
            cpu: 500m
            memory: 1Gi
        livenessProbe:
          httpGet:
            path: /healthz/
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /healthz/
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
      restartPolicy: Always
