service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8l-backend
  namespace: k8l
  labels:
    app: k8l-backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: k8l-backend
