ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8l-backend
  namespace: k8l
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:301811561350:certificate/1ad4c576-3db1-4c73-a7c1-a93606ae2bd6
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '3'
spec:
  ingressClassName: alb
  rules:
  - host: api.eks.cloudzyra.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8l-backend
            port:
              number: 80
